<resources>
    <string name="app_name">E-Shop</string>
    <string name="login_btn">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_input">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="admin_panel_link">I\'m an Admin</string>
    <string name="Register">Register</string>
    <string name="name_input">Enter your name</string>
    <string name="Log_out">Log Out</string>
    <string name="email_input">Enter your e-mail</string>
    <string name="not_admin_panel_link">I\'m a User</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>