<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_bg"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/textView2"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/input_design"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone_input"
        android:inputType="phone"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="WELCOME BACK"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/input_phone"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/input_design"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/buttons"
        android:drawableEnd="@drawable/ic_baseline_login_24"
        android:paddingStart="50dp"
        android:paddingEnd="75dp"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="48sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_chk"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cbd_strokeColor="@color/colorPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/forgot_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:gravity="start"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sign_in_btn"
        android:layout_alignEnd="@+id/sign_in_btn"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="0dp"
        android:text="@string/admin_panel_link"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sign_in_btn"
        android:layout_alignTop="@+id/sign_in_btn"
        android:layout_marginStart="0dp"
        android:layout_marginTop="85dp"
        android:text="@string/not_admin_panel_link"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:visibility="invisible" />


</RelativeLayout>