<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_bg"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="S I G N   U P"
        android:textColor="@color/white"
        android:textSize="60sp" />


    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/textView1"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/input_design_white"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/name_input"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/register_name"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/input_design_white"
        android:drawableStart="@drawable/ic_baseline_phone_white_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone_input"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/register_phone"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/input_design_white"
        android:drawableStart="@drawable/ic_baseline_lock_white_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/buttons"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="visible"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:text="Please enter your personal info"
        android:textColor="@color/white"
        android:textSize="22sp" />

</RelativeLayout>